Meta Data for SEO

--- a/index.html
+++ b/index.html
@@ -2,16 +2,70 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Muralidhara Bhat KS | Software Engineer | Full Stack Developer |
-      Javascript | Python | Go
-    </title>
-  </head>
+    <title>Muralidhara Bhat KS - Software Engineer | Full Stack Developer</title>
+    
+    <!-- Meta Description for SEO -->
+    <meta 
+      name="description" 
+      content="Muralidhara Bhat KS, a proficient Software Engineer specializing in full stack development with expertise in Java, JavaScript, CPP,  Python, and modern web technologies." 
+    />
 
+    <!-- Keywords for SEO -->
+    <meta 
+      name="keywords" 
+      content="Muralidhara Bhat KS, Software Engineer, Full Stack Developer, JavaScript, Python, MERN Stack, React, Node.js, Spring Boot, Web Development, CPP, Java "
+    />
+
+    <!-- Author Meta Tag -->
+    <meta name="author" content="Muralidhara Bhat KS" />
+
+    <!-- Social Media / Open Graph Meta Tags -->
+    <meta property="og:title" content="Muralidhara Bhat KS - Software Engineer | Full Stack Developer" />
+    <meta 
+      property="og:description" 
+      content="Explore the portfolio of Muralidhara Bhat KS, a dynamic Software Engineer specializing in Full Stack Development with technologies like JavaScript, Python, and more."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://muralidharabhat.in" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/61873962?v=4" />
+    
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Muralidhara Bhat KS - Software Engineer | Full Stack Developer" />
+    <meta name="twitter:description" content="Learn about Muralidhara Bhat KS, a Software Engineer with expertise in JavaScript, Python, and full stack web development." />
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/61873962?v=4" />
+
+    <!-- Link Preload for Faster Loading -->
+    <link rel="preload" href="/src/main.jsx" as="script" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- Structured Data for SEO (JSON-LD Format) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Muralidhara Bhat KS",
+        "jobTitle": "Software Engineer, Full Stack Developer",
+        "url": "https://muralidharabhat.in",
+        "sameAs": [
+          "https://github.com/slendershield",
+          "https://www.linkedin.com/in/ksmuralidhara0/"
+        ],
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Your Company"
+        },
+        "knowsAbout": ["JavaScript", "Python", "MERN Stack", "Spring Boot", "Web Development"],
+        "image": "https://avatars.githubusercontent.com/u/61873962?v=4"
+      }
+    </script>
+  </head>
+  
   <body>
-    <div id="root"></div>
+    <main id="root" role="main"></main>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
