Add fevicon to the site

--- a/index.html
+++ b/index.html
@@ -1,49 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muralidhara Bhat KS - Software Engineer | Full Stack Developer</title>
-    
-    <!-- Meta Description for SEO -->
-    <meta 
-      name="description" 
-      content="Muralidhara Bhat KS, a proficient Software Engineer specializing in full stack development with expertise in Java, JavaScript, CPP,  Python, and modern web technologies." 
-    />
 
-    <!-- Keywords for SEO -->
-    <meta 
-      name="keywords" 
-      content="Muralidhara Bhat KS, Software Engineer, Full Stack Developer, JavaScript, Python, MERN Stack, React, Node.js, Spring Boot, Web Development, CPP, Java "
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Muralidhara Bhat KS - Software Engineer | Full Stack Developer</title>
 
-    <!-- Author Meta Tag -->
-    <meta name="author" content="Muralidhara Bhat KS" />
+  <meta name="description"
+    content="Muralidhara Bhat KS, a proficient Software Engineer specializing in full stack development with expertise in Java, JavaScript, React, Spring Boot, and other modern web technologies." />
 
-    <!-- Social Media / Open Graph Meta Tags -->
-    <meta property="og:title" content="Muralidhara Bhat KS - Software Engineer | Full Stack Developer" />
-    <meta 
-      property="og:description" 
-      content="Explore the portfolio of Muralidhara Bhat KS, a dynamic Software Engineer specializing in Full Stack Development with technologies like JavaScript, Python, and more."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://muralidharabhat.in" />
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/61873962?v=4" />
-    
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Muralidhara Bhat KS - Software Engineer | Full Stack Developer" />
-    <meta name="twitter:description" content="Learn about Muralidhara Bhat KS, a Software Engineer with expertise in JavaScript, Python, and full stack web development." />
-    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/61873962?v=4" />
+  <meta name="keywords"
+    content="Muralidhara Bhat KS, Software Engineer, Full Stack Developer, JavaScript, MongoDB, MERN Stack, React, Node.js, Spring Boot, Web Development, Java" />
 
-    <!-- Link Preload for Faster Loading -->
-    <link rel="preload" href="/src/main.jsx" as="script" />
+  <meta name="author" content="Muralidhara Bhat KS" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" />
+  <meta property="og:title" content="Muralidhara Bhat KS - Software Engineer | Full Stack Developer" />
+  <meta property="og:description"
+    content="Explore the portfolio of Muralidhara Bhat KS, a dynamic Software Engineer specializing in Full Stack Development with technologies like JavaScript, Java, and more." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://muralidharabhat.in" />
+  <meta property="og:image" content="https://avatars.githubusercontent.com/u/61873962?v=4" />
 
-    <!-- Structured Data for SEO (JSON-LD Format) -->
-    <script type="application/ld+json">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Muralidhara Bhat KS - Software Engineer | Full Stack Developer" />
+  <meta name="twitter:description"
+    content="Learn about Muralidhara Bhat KS, a Software Engineer with expertise in JavaScript, Java, and full stack web development." />
+  <meta name="twitter:image" content="public/favicon_io/" />
+
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Muralidhara Bhat" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
+
+  <link rel="preload" href="/src/main.jsx" as="script" />
+
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
@@ -56,16 +49,18 @@
         ],
         "worksFor": {
           "@type": "Organization",
-          "name": "Your Company"
+          "name": "Self Employed"
         },
-        "knowsAbout": ["JavaScript", "Python", "MERN Stack", "Spring Boot", "Web Development"],
-        "image": "https://avatars.githubusercontent.com/u/61873962?v=4"
+        "knowsAbout": ["JavaScript", "Python", "MERN Stack", "Spring Boot", "Web Development", "CPP", "Java"],
+        "image": "https://avatars.githubusercontent.com/u/61873962?v=4",
+        "alumniOf": "VTU"
       }
     </script>
-  </head>
-  
-  <body>
-    <main id="root" role="main"></main>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+</head>
+
+<body>
+  <main id="root" role="main"></main>
+  <script type="module" src="/src/main.jsx" defer></script>
+</body>
+
 </html>
